setup pug files

--- a/views/first_view.pug
+++ b/views/first_view.pug
@@ -5,4 +5,5 @@ block scripts
 
 
 block content
-    p.greetings#people Hello from PUG!
+    .container
+        p.badge.badge-secondary Hello from PUG!
