--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,12 @@
 html
   head
     title = Register & Login Practice    -    by Hooman
+    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css", integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk", crossorigin="anonymous")
     block scripts
+        
 
   body
     block content
-    block foot
-      #footer
-        p some footer content
+    //- block foot
+    //-   #footer
+    //-     p some footer content
