--- a/views/register.pug
+++ b/views/register.pug
@@ -8,28 +8,32 @@ block content
     .container
         form.form-signin
             .text-center.mb-4
-                h1.h3.mb-3.font-weight-normal Floating labels
-                p Build form controls ...
-                    code code text
-                    a(href="https:///google.com") google
+                h1.h3.mb-3.font-weight-normal Sign-up!
+                p Insert your information to sign-up!
+                br
+                hr
+
+            .px-5
+                .form-label-group
+                    label.col-sm-6(for="inputEmail") Email address
+                    .col-sm-4
+                        input.form-control(type="email", id="inputEmail", placeholder="Email address")
+                    
+                br
+                .form-label-group
+                    label.col-sm-6(for="inputPassword") Password
+                    .col-sm-4
+                        input.form-control(type="password", id="inputPassword", placeholder="Password")
+                    
+                br
+                .form-label-group
+                    label.col-sm-6(for="inputConfPassword") Confirm password
+                    .col-sm-4
+                        input.form-control(type="password", id="inputConfPassword", placeholder="Again password")
+                    
 
 
-            .form-label-group
-                label(for="inputEmail") Email address
-                input.form-control(type="email", id="inputEmail", placeholder="Email address")
-                
-            br
-            .form-label-group
-                label(for="inputPassword") Password
-                input.form-control(type="password", id="inputPassword", placeholder="Password")
-                
-            br
-            .form-label-group
-                label(for="inputConfPassword") Confirm password
-                input.form-control(type="password", id="inputConfPassword", placeholder="Again password")
-                
-
-
-            .checkbox.mb-3
-            button.btn.btn-lg.btn-secondary.btn-block Register!
-            p.mt-5.mb-3.text-muted.text-center VIHAN
+                .checkbox.mb-3
+                .col-sm-4
+                    button.btn.btn-lg.btn-secondary.btn-block Register!
+                    p.mt-5.mb-3.text-muted.text-center VIHAN
