--- a/views/register.pug
+++ b/views/register.pug
@@ -36,4 +36,4 @@ block content
                 .checkbox.mb-3
                 .col-sm-4
                     button.btn.btn-lg.btn-secondary.btn-block Register!
-                    p.mt-5.mb-3.text-muted.text-center VIHAN
+                    p.mt-5.mb-3.text-muted.text-center AMIR - VIHAN 2020
