--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,15 @@ html
         
 
   body
+    nav.navbar.navbar-light(style='background-color: #e3f2fd;')
+      span.navbar-text.
+        This is just a test website to practice login, logout, using cookie, session, and database
+              -      Developped by By :
+      
+      a.navbar-brand(href='http://hooman.hesamian.com', style='color: green;') .: Hooman Hesamyan :.
+        
     block content
     //- block foot
     //-   #footer
     //-     p some footer content
+
