--- a/views/register.pug
+++ b/views/register.pug
@@ -5,35 +5,32 @@ block scripts
 
 
 block content
-    .container
-        form.form-signin
+    .container-fluid.mt-3
+        form.form-signin(method='POST', action='/api')
             .text-center.mb-4
                 h1.h3.mb-3.font-weight-normal Sign-up!
                 p Insert your information to sign-up!
                 br
-                hr
 
             .px-5
                 .form-label-group
                     label.col-sm-6(for="inputEmail") Email address
                     .col-sm-4
-                        input.form-control(type="email", id="inputEmail", placeholder="Email address")
+                        input.form-control(type="email", id="inputEmail", name='email', placeholder="Email address")
                     
                 br
                 .form-label-group
                     label.col-sm-6(for="inputPassword") Password
                     .col-sm-4
-                        input.form-control(type="password", id="inputPassword", placeholder="Password")
+                        input.form-control(type="password", id="inputPassword", name='pass', placeholder="Password")
                     
                 br
                 .form-label-group
                     label.col-sm-6(for="inputConfPassword") Confirm password
                     .col-sm-4
-                        input.form-control(type="password", id="inputConfPassword", placeholder="Again password")
+                        input.form-control(type="password", id="inputConfPassword", name='rePass', placeholder="Again password")
                     
-
-
-                .checkbox.mb-3
+                br
                 .col-sm-4
-                    button.btn.btn-lg.btn-secondary.btn-block Register!
+                    button.btn.btn-lg.btn-secondary.btn-block(type='submit') Register!
                     p.mt-5.mb-3.text-muted.text-center AMIR - VIHAN 2020
