--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,10 @@ html
               -      Developped by By :
       
       a.navbar-brand(href='http://hooman.hesamian.com', style='color: green;') .: Hooman Hesamyan :.
-        
+
+      
+      a.btn.btn-outline-info.my-2.my-sm-0(href='/') Go back home!
+
     block content
     //- block foot
     //-   #footer
