to be continued

--- a/views/first_view.pug
+++ b/views/first_view.pug
@@ -6,16 +6,16 @@ block scripts
 
 block content
     .container-fluid.my-5
-        h1.text-muted
+        h1.text-muted.mx-5
             em Welcome...
         
         br
-        
-        form.pd-1(method='GET', action='/api/register')
+
+        form.pd-1.mx-5(method='GET', action='/api/register')
  
             button.btn.btn-outline-primary.btn-lg.btn-block To register please - Sign Up!
 
-        form.pd-1(method='GET', action='/api/login')
+        form.pd-1.mx-5(method='GET', action='/api/login')
             
             button.btn.btn-outline-success.btn-lg.btn-block To login please - Sign In!
 
